samples/_failures_safe/1761151562_abfc19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca0e7af2.c: In function ‘generate_cube_points’:
./samples/SAFE/__tmp_ca0e7af2.c:142:9: error: expected expression at end of input
  142 |         {-half, -half, -half}, {-half,
      |         ^
./samples/SAFE/__tmp_ca0e7af2.c:142:9: error: expected declaration or statement at end of input
